--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.3",
     "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
     "coveralls": "^3.0.1",
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
