--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cson": "^4.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "google-protobuf": "^3.7.0-rc.2",
     "hat": "0.0.3",
     "highlight.js": "^9.12.0",
     "javascript-state-machine": "^2.4.0",
