--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "adm-zip": "^0.4.13",
     "amqplib": "^0.5.3",
     "aws-iot-device-sdk": "^2.2.1",
+    "axios": "^0.18.0",
     "bcrypt": "^3.0.2",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
