--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cron": "^1.7.0",
     "cson": "^4.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
@@ -81,7 +82,7 @@
     "mocha": "^4.0.1",
     "mocha-lcov-reporter": "^1.3.0",
     "mongodb-memory-server": "^2.9.3",
-    "nyc": "^13.3.0",
+    "nyc": "^14.1.0",
     "rewire": "^3.0.2",
     "sinon": "^7.2.4",
     "sinon-chai": "^2.14.0",
