--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "reactcss": "^1.2.3",
+    "recharts": "^1.5.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
